# pdf-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
power/: POWER.md  mcp.json
power/steering/: best-practices.md  distributed-parsing.md
src/: error.rs  lib.rs  main.rs  pdf_reader.rs  service.rs
tests/fixtures/: generate_fixtures.rs
